2011-12-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tex.ch: Consistency of `constants'.

2011-10-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac [WIN32]: Add `-lgdi32' to POPPLER_LIBS.

2011-10-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.h (ENABLE_PIPES): New macro for pipe support.

2011-10-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Add poppler feature tests for luaTeX.

2011-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/web.am (DISTCLEANFILES): Preserve distributed files.

	* Makefile.am (DISTCLEANFILES): Add CXXLD.sh.
	* am/texmf.am (DISTCLEANFILES): Add write18-quote.log.
	* am/web.am (DISTCLEANFILES): Add longline.{aux,bbl,bib,blg}.

2011-09-30  Peter Breitenlohner  <peb@mp.mpg.de>

	* tex.ch (print_file_line): Bug fix: avoid uninitialized lineno.
	Patch and discussion from Karl, 21 Sep 2011 16:05:09 GMT.

2011-09-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp-help.h: The option -kanji-internal=STRING is effective
	also for pTeX and epTeX.

2011-08-29  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.h [WIN32]: Allow to build TeX & Co as DLL.

2011-08-23  Peter Breitenlohner  <peb@mp.mpg.de>

	* triptrap-sh: Add uptrip and euptrip tests.

2011-08-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmem.h: upTeX uses Aleph-type memory words.

2011-08-19  Peter Breitenlohner  <peb@mp.mpg.de>

	* help.h (UPBIBTEXHELP): Add "-kanji-internal".

2011-08-17  Peter Breitenlohner  <peb@mp.mpg.de>

	* help.h (PBIBTEXHELP, PDVITYPEHELP, PPLTOTFHELP, PTFTOPLHELP):
	Add "-sjis-terminal" for WIN32 versions.  Uniform appearance.
	Add UPBIBTEXHELP, UPDVITYPEHELP, UPPLTOTFHELP, and UPTFTOPLHELP.
	* texmfmp-help.h: WIN32 options also for MINGW32.

	* configure.ac: New conditional UPWEB for upBibTeX and Co.

2011-08-17  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp-help.h: Recover help messages for w32tex.

2011-08-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp-help.h: Remove w32tex garbage.
