@@ -20,6 +20,7 @@ DISTCLEANFILES += $(omegaware_programs:=.c) $(omegaware_programs:=.h) \
 	$(omegaware_programs:=.p) $(omegaware_programs:=-web2c)
 
 ow_tangle = WEBINPUTS=$(srcdir)/omegaware $(buildenv) $(TANGLE)
+ow_otangle = WEBINPUTS=.:$(srcdir)/omegaware $(buildenv) $(OTANGLE)
 
 nodist_odvicopy_SOURCES = odvicopy.c odvicopy.h
 odvicopy.c odvicopy.h: odvicopy-web2c
@@ -76,20 +77,24 @@ ovf2ovp.c ovf2ovp.h: ovf2ovp-web2c
 	@$(web2c) ovf2ovp
 ovf2ovp-web2c: ovf2ovp.p $(web2c_depend)
 	@$(web2c) ovf2ovp
-EXTRA_DIST += $(ovf2ovp_sources)
-ovf2ovp_sources = omegaware/ovf2ovp.web omegaware/ovf2ovp.ch
-ovf2ovp.p: tangle$(EXEEXT) $(ovf2ovp_sources)
-	$(ow_tangle) ovf2ovp ovf2ovp
-
+ovf2ovp.p: otangle$(EXEEXT) ovf2ovp.web omegaware/ovf2ovp.ch
+	$(ow_otangle) ovf2ovp ovf2ovp
+ovf2ovp.web: tie$(EXEEXT) omegaware/ovf2ovp.web omegaware/ovf2ovp.up
+	$(tie) -m ovf2ovp.web omegaware/ovf2ovp.web omegaware/ovf2ovp.up
+EXTRA_DIST += omegaware/ovf2ovp.web omegaware/ovf2ovp.up omegaware/ovf2ovp.ch
+DISTCLEANFILES += ovf2ovp.web
+	
 nodist_ovp2ovf_SOURCES = ovp2ovf.c ovp2ovf.h
 ovp2ovf.c ovp2ovf.h: ovp2ovf-web2c
 	@$(web2c) ovp2ovf
 ovp2ovf-web2c: ovp2ovf.p $(web2c_depend)
 	@$(web2c) ovp2ovf
-EXTRA_DIST += $(ovp2ovf_sources)
-ovp2ovf_sources = omegaware/ovp2ovf.web omegaware/ovp2ovf.ch
-ovp2ovf.p: tangle$(EXEEXT) $(ovp2ovf_sources)
-	$(ow_tangle) ovp2ovf ovp2ovf
+ovp2ovf.p: otangle$(EXEEXT) ovp2ovf.web omegaware/ovp2ovf.ch
+	$(ow_otangle) ovp2ovf ovp2ovf
+ovp2ovf.web: tie$(EXEEXT) omegaware/ovp2ovf.web omegaware/ovp2ovf.up
+	$(tie) -m ovp2ovf.web omegaware/ovp2ovf.web omegaware/ovp2ovf.up
+EXTRA_DIST += omegaware/ovp2ovf.web omegaware/ovp2ovf.up omegaware/ovp2ovf.ch
+DISTCLEANFILES += ovp2ovf.web
 
 ## Tests
 ##
