@@ -1,0 +1,5 @@
+@x
+@d char_max=@"FFFF
+@y
+@d char_max=@"10FFFF
+@z
