@@ -1,0 +1,46 @@
+@x [3] Increase constants.
+@d char_max=@"FFFF
+@y
+@d char_max=@"10FFFF
+@z
+@x [3] Increase constants.
+@d width_max=@"FFFF
+@y
+@d width_max=@"10FFFF
+@z
+@x [3] Increase constants.
+@!vf_size=200000; {maximum length of |vf| data, in bytes}
+@y
+@!vf_size=800000; {maximum length of |vf| data, in bytes}
+@z
+
+@x [60]
+@d max_byte=@"FFFF
+
+@p function get_byte:byte; {scans a one-byte property value}
+@y
+@d max_byte=@"FFFFFF
+
+@p function get_byte:integer; {scans a one-byte property value}
+@z
+@x [62]
+    skip_error('This value shouldn''t exceed 65535');
+@y
+    skip_error('This value shouldn''t exceed 16777215');
+@z
+@x [63]
+    skip_error('This value shouldn''t exceed ''177777');
+@y
+    skip_error('This value shouldn''t exceed ''77777777');
+@z
+@x [64]
+    skip_error('This value shouldn''t exceed "FFFF');
+@y
+    skip_error('This value shouldn''t exceed "FFFFFF');
+@z
+
+@x [152]
+procedure read_packet(@!c:byte);
+@y
+procedure read_packet(@!c:integer);
+@z
